added Twenty One Pilots

--- a/music/alternative.html
+++ b/music/alternative.html
@@ -870,13 +870,13 @@
                     <div class="multi-link">
                         <span>Caesars</span>
                         <div>
-                            spotify:artist:4rGrN4XDYhP6dUAZMvcuHr
                             <a href="https://open.spotify.com/artist/4rGrN4XDYhP6dUAZMvcuHr" target="_blank"><img
                                     class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                             <a href="https://fr.wikipedia.org/wiki/Caesars" target="_blank"><img class="wiki-icon"
                                     src="../images/icons/wiki.png" alt="wikipedia link" /></a>
                         </div>
                     </div>
+                    (Caesars Palace)
                 </h3>
                 <div class="no-overflow">
                     <figure class="float-right bordered img-align">
@@ -888,7 +888,7 @@
                         </figcaption>
                     </figure>
                     <p>
-                        Groupe d'origine suédoise, il est composé 4 membres : César Vidal (chanteur, guitariste), David
+                        Groupe d'origine suédoise, il est composé de 4 membres : César Vidal (chanteur, guitariste), David
                         Lindqvist
                         (bassiste),
                         Nino Keller (batteur) et Klas Åhlund (clavier).
@@ -974,9 +974,8 @@
                                     <a href="https://open.spotify.com/album/1Yj5hc5u73IMzQzLEtforP" target="_blank"><img
                                             class="spotify-icon" src="../images/icons/spotify.png"
                                             alt="spotify link" /></a>
-                                    <a href="https://fr.wikipedia.org/wiki/Strawberry_Weed"
-                                        target="_blank"><img class="wiki-icon" src="../images/icons/wiki.png"
-                                            alt="wikipedia link" /></a>
+                                    <a href="https://fr.wikipedia.org/wiki/Strawberry_Weed" target="_blank"><img
+                                            class="wiki-icon" src="../images/icons/wiki.png" alt="wikipedia link" /></a>
                                     <a href="https://www.youtube.com/playlist?list=OLAK5uy_msJ7jkgp5iu8W9ikyFk_mY1cWMxF3Nh5Y"
                                         target="_blank"><img class="yt-icon" src="../images/icons/yt.png"
                                             alt="youtube link" /></a>
@@ -1015,6 +1014,243 @@
                     </div>
                     <figcaption>
                         Deux titres de Caesars, Jerk It Out (2002) et Over´fore It Started (2002)
+                    </figcaption>
+                </figure>
+                <span class="source">Source : wikipedia.org</span>
+                <span class="button"><a href="#">Retour en haut de la page !</a></span>
+            </article>
+            <article>
+                <h3>
+                    <div class="multi-link">
+                        <span>X Ambassadors</span>
+                        <div>
+                            <a href="https://open.spotify.com/artist/3NPpFNZtSTHheNBaWC82rB" target="_blank"><img
+                                    class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
+                            <a href="https://fr.wikipedia.org/wiki/X_Ambassadors" target="_blank"><img class="wiki-icon"
+                                    src="../images/icons/wiki.png" alt="wikipedia link" /></a>
+                            <a href="https://www.youtube.com/user/XAmbassadors" target="_blank"><img class="yt-icon"
+                                    src="../images/icons/yt.png" alt="youtube link" /></a>
+                        </div>
+                    </div>
+                </h3>
+                <div class="no-overflow">
+                    <figure class="float-right bordered img-align">
+                        <img class="rounded-corners"
+                            src="https://i.scdn.co/image/f9669e02d7b9ed1a288c332bf220600911174650" height="180"
+                            alt="XA" />
+                        <figcaption>
+                            Les artistes du groupe
+                        </figcaption>
+                    </figure>
+                    <p>
+                        Groupe d'origine américaine, il est composé actuellement de 4 membres : Sam Harris (chanteur,
+                        guitariste, saxophoniste),
+                        Casey Harris (claviers), Noah Feldshuh (guitariste) et Adam Levin (batteur).
+                        Le groupe a été formé en 2009 et est toujours actif.
+                    </p>
+                    <p>
+                        Le groupe totalise actuellement (2019) 2 albums :
+                    </p>
+                    <ul>
+                        <li>
+                            <div class="multi-link">
+                                <span>VHS</span>
+                                <div>
+                                    <a href="https://open.spotify.com/album/7A8fZ2jjiu5heq7wNCutKN" target="_blank"><img
+                                            class="spotify-icon" src="../images/icons/spotify.png"
+                                            alt="spotify link" /></a>
+                                    <a href="https://fr.wikipedia.org/wiki/X_Ambassadors#VHS_et_deuxi%C3%A8me_album_(depuis_2015)"
+                                        target="_blank"><img class="wiki-icon" src="../images/icons/wiki.png"
+                                            alt="wikipedia link" /></a>
+                                    <a href="https://www.youtube.com/playlist?list=OLAK5uy_n92DSMYrTe_vuLZtqqI_Db8DOMLuSXdp4"
+                                        target="_blank"><img class="yt-icon" src="../images/icons/yt.png"
+                                            alt="youtube link" /></a>
+                                </div>
+                            </div>
+                            (2015)
+                        </li>
+                        <li>
+                            <div class="multi-link">
+                                <span>Orion</span>
+                                <div>
+                                    <a href="https://open.spotify.com/album/5YF8ms264wRnswVK1YMYmu" target="_blank"><img
+                                            class="spotify-icon" src="../images/icons/spotify.png"
+                                            alt="spotify link" /></a>
+                                    <a href="https://en.wikipedia.org/wiki/Orion_(X_Ambassadors_album)"
+                                        target="_blank"><img class="wiki-icon" src="../images/icons/wiki.png"
+                                            alt="wikipedia link" /></a>
+                                    <a href="https://www.youtube.com/playlist?list=OLAK5uy_mNivE-2vdm8M31w5GOxKEVdKa0TsX0EZg"
+                                        target="_blank"><img class="yt-icon" src="../images/icons/yt.png"
+                                            alt="youtube link" /></a>
+                                </div>
+                            </div>
+                            (2019)
+                        </li>
+                    </ul>
+                </div>
+                <div class="spotify-integ">
+                    <div>
+                        <iframe src="https://open.spotify.com/embed/track/0fYVliAYKHuPmECRs1pbRf"
+                            allowtransparency="true" allow="encrypted-media"></iframe>
+                    </div>
+                    <div>
+                        <iframe src="https://open.spotify.com/embed/track/7lGKEWMXVWWTt3X71Bv44I"
+                            allowtransparency="true" allow="encrypted-media"></iframe>
+                    </div>
+                </div>
+                <figure class="yt-integ">
+                    <div>
+                        <div>
+                            <div>
+                                <iframe src="https://www.youtube-nocookie.com/embed/1u-niluB8HI"
+                                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <iframe src="https://www.youtube-nocookie.com/embed/V0lw3qylVfY"
+                                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+                        </div>
+                    </div>
+                    <figcaption>
+                        Deux titres de XA, Renegades (2015) et Unsteady (2015)
+                    </figcaption>
+                </figure>
+                <span class="source">Source : wikipedia.org</span>
+                <span class="button"><a href="#">Retour en haut de la page !</a></span>
+            </article>
+            <article>
+                <h3>
+                    <div class="multi-link">
+                        <span>Twenty One Pilots</span>
+                        <div>
+                            <a href="https://open.spotify.com/artist/3YQKmKGau1PzlVlkL1iodx" target="_blank"><img
+                                    class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
+                            <a href="https://fr.wikipedia.org/wiki/Twenty_One_Pilots" target="_blank"><img class="wiki-icon"
+                                    src="../images/icons/wiki.png" alt="wikipedia link" /></a>
+                            <a href="https://www.youtube.com/user/twentyonepilots" target="_blank"><img class="yt-icon"
+                                    src="../images/icons/yt.png" alt="youtube link" /></a>
+                        </div>
+                    </div>
+                </h3>
+                <div class="no-overflow">
+                    <figure class="float-right bordered img-align">
+                        <img class="rounded-corners"
+                            src="http://media.altpress.com/uploads/2019/06/twenty-one-pilots-trench-002.jpg"
+                            width="200" alt="Twenty One Pilots" />
+                        <figcaption>
+                            Le duo
+                        </figcaption>
+                    </figure>
+                    <p>
+                            Groupe d'origine américaine, il est composé de 2 membres :
+                            <a href="https://fr.wikipedia.org/wiki/Tyler_Joseph" target="_blank">Tyler Joseph</a> (chanteur, bassiste, guitariste, claviers et autres),
+                            <a href="https://fr.wikipedia.org/wiki/Josh_Dun" target="_blank">Josh Dun</a> (trompette, percussions).
+                            Le groupe a été formé en 2009, et a accueilli en tous 4 artistes au fil du temps. Il est toujours en activité.
+                        </p>
+                    <p>
+                        Le groupe totalise actuellement (2019) 4 albums :
+                    </p>
+                    <ul>
+                        <li>
+                            <div class="multi-link">
+                                <span>Twenty One Pilots</span>
+                                <div>
+                                    <a href="https://open.spotify.com/album/1Fexc96V24RL17Ko9VXUOM" target="_blank"><img
+                                            class="spotify-icon" src="../images/icons/spotify.png"
+                                            alt="spotify link" /></a>
+                                    <a href="https://www.youtube.com/playlist?list=OLAK5uy_kLlpzRsc1GRlT8ymfzXLrQUS17jPeQSgU"
+                                        target="_blank"><img class="yt-icon" src="../images/icons/yt.png"
+                                            alt="youtube link" /></a>
+                                </div>
+                            </div>
+                            (2009) - éponyme
+                        </li>
+                        <li>
+                            <div class="multi-link">
+                                <span>Vessel</span>
+                                <div>
+                                    <a href="https://open.spotify.com/album/2r2r78NE05YjyHyVbVgqFn" target="_blank"><img
+                                            class="spotify-icon" src="../images/icons/spotify.png"
+                                            alt="spotify link" /></a>
+                                    <a href="https://fr.wikipedia.org/wiki/Twenty_One_Pilots#Vessel_et_d%C3%A9buts_t%C3%A9l%C3%A9vis%C3%A9s_(2012_-_2013)"
+                                        target="_blank"><img class="wiki-icon" src="../images/icons/wiki.png"
+                                            alt="wikipedia link" /></a>
+                                    <a href="https://www.youtube.com/playlist?list=OLAK5uy_nj8mnopxSbKSdq29njgos6tdYIPaLySPo"
+                                        target="_blank"><img class="yt-icon" src="../images/icons/yt.png"
+                                            alt="youtube link" /></a>
+                                </div>
+                            </div>
+                            (2013)
+                        </li>
+                        <li>
+                            <div class="multi-link">
+                                <span>Blurryface</span>
+                                <div>
+                                    <a href="https://open.spotify.com/album/3cQO7jp5S9qLBoIVtbkSM1" target="_blank"><img
+                                            class="spotify-icon" src="../images/icons/spotify.png"
+                                            alt="spotify link" /></a>
+                                    <a href="https://fr.wikipedia.org/wiki/Twenty_One_Pilots#Blurryface_(2015_-_2017)"
+                                        target="_blank"><img class="wiki-icon" src="../images/icons/wiki.png"
+                                            alt="wikipedia link" /></a>
+                                    <a href="https://www.youtube.com/playlist?list=OLAK5uy_mWtWynXa5NeLQEJjvrmVZmmO48G4eBBWg"
+                                        target="_blank"><img class="yt-icon" src="../images/icons/yt.png"
+                                            alt="youtube link" /></a>
+                                </div>
+                            </div>
+                            (2015)
+                        </li>
+                        <li>
+                            <div class="multi-link">
+                                <span>Trench</span>
+                                <div>
+                                    <a href="https://open.spotify.com/album/621cXqrTSSJi1WqDMSLmbL" target="_blank"><img
+                                            class="spotify-icon" src="../images/icons/spotify.png"
+                                            alt="spotify link" /></a>
+                                    <a href="https://fr.wikipedia.org/wiki/Twenty_One_Pilots#Trench_(depuis_2018)"
+                                        target="_blank"><img class="wiki-icon" src="../images/icons/wiki.png"
+                                            alt="wikipedia link" /></a>
+                                    <a href="https://www.youtube.com/playlist?list=OLAK5uy_kfi5-NzKeymx9f2fwYcQNNCqifLbbC86o"
+                                        target="_blank"><img class="yt-icon" src="../images/icons/yt.png"
+                                            alt="youtube link" /></a>
+                                </div>
+                            </div>
+                            (2018)
+                        </li>
+                    </ul>
+                </div>
+                <div class="spotify-integ">
+                    <div>
+                        <iframe src="https://open.spotify.com/embed/track/2Z8WuEywRWYTKe1NybPQEW"
+                            allowtransparency="true" allow="encrypted-media"></iframe>
+                    </div>
+                    <div>
+                        <iframe src="https://open.spotify.com/embed/track/5cbpoIu3YjoOwbBDGUEp3P"
+                            allowtransparency="true" allow="encrypted-media"></iframe>
+                    </div>
+                </div>
+                <figure class="yt-integ">
+                    <div>
+                        <div>
+                            <div>
+                                <iframe src="https://www.youtube-nocookie.com/embed/Pw-0pbY9JeU"
+                                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <iframe src="https://www.youtube-nocookie.com/embed/92XVwY54h5k"
+                                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+                        </div>
+                    </div>
+                    <figcaption>
+                        Deux titres de Twenty One Pilots, Ride (2015) et Car Radio (2013)
                     </figcaption>
                 </figure>
                 <span class="source">Source : wikipedia.org</span>
