FINISHED THE FUCKING alternative.html SHIT HOURRAY I'M DONE WITH ALL THIS WORK    I'M FREEEEEEE

--- a/music/alternative.html
+++ b/music/alternative.html
@@ -888,7 +888,8 @@
                         </figcaption>
                     </figure>
                     <p>
-                        Groupe d'origine suédoise, il est composé de 4 membres : César Vidal (chanteur, guitariste), David
+                        Groupe d'origine suédoise, il est composé de 4 membres : César Vidal (chanteur, guitariste),
+                        David
                         Lindqvist
                         (bassiste),
                         Nino Keller (batteur) et Klas Åhlund (clavier).
@@ -1129,8 +1130,8 @@
                         <div>
                             <a href="https://open.spotify.com/artist/3YQKmKGau1PzlVlkL1iodx" target="_blank"><img
                                     class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
-                            <a href="https://fr.wikipedia.org/wiki/Twenty_One_Pilots" target="_blank"><img class="wiki-icon"
-                                    src="../images/icons/wiki.png" alt="wikipedia link" /></a>
+                            <a href="https://fr.wikipedia.org/wiki/Twenty_One_Pilots" target="_blank"><img
+                                    class="wiki-icon" src="../images/icons/wiki.png" alt="wikipedia link" /></a>
                             <a href="https://www.youtube.com/user/twentyonepilots" target="_blank"><img class="yt-icon"
                                     src="../images/icons/yt.png" alt="youtube link" /></a>
                         </div>
@@ -1139,18 +1140,21 @@
                 <div class="no-overflow">
                     <figure class="float-right bordered img-align">
                         <img class="rounded-corners"
-                            src="http://media.altpress.com/uploads/2019/06/twenty-one-pilots-trench-002.jpg"
-                            width="200" alt="Twenty One Pilots" />
+                            src="http://media.altpress.com/uploads/2019/06/twenty-one-pilots-trench-002.jpg" width="200"
+                            alt="Twenty One Pilots" />
                         <figcaption>
                             Le duo
                         </figcaption>
                     </figure>
                     <p>
-                            Groupe d'origine américaine, il est composé de 2 membres :
-                            <a href="https://fr.wikipedia.org/wiki/Tyler_Joseph" target="_blank">Tyler Joseph</a> (chanteur, bassiste, guitariste, claviers et autres),
-                            <a href="https://fr.wikipedia.org/wiki/Josh_Dun" target="_blank">Josh Dun</a> (trompette, percussions).
-                            Le groupe a été formé en 2009, et a accueilli en tous 4 artistes au fil du temps. Il est toujours en activité.
-                        </p>
+                        Groupe d'origine américaine, il est composé de 2 membres :
+                        <a href="https://fr.wikipedia.org/wiki/Tyler_Joseph" target="_blank">Tyler Joseph</a> (chanteur,
+                        bassiste, guitariste, claviers et autres),
+                        <a href="https://fr.wikipedia.org/wiki/Josh_Dun" target="_blank">Josh Dun</a> (trompette,
+                        percussions).
+                        Le groupe a été formé en 2009, et a accueilli en tous 4 artistes au fil du temps. Il est
+                        toujours en activité.
+                    </p>
                     <p>
                         Le groupe totalise actuellement (2019) 4 albums :
                     </p>
@@ -1255,6 +1259,24 @@
                 </figure>
                 <span class="source">Source : wikipedia.org</span>
                 <span class="button"><a href="#">Retour en haut de la page !</a></span>
+            </article>
+            <article>
+                <h3>
+                    Aujourd'hui
+                </h3>
+                <div class="paragraph">
+                    De nos jours, on entendra souvent la musique alternative au quotidien (que ce soit à la radio, à la
+                    télévision,
+                    en public, etc...)
+                    étant assez apprécié par la plupart du monde. Etant littéralement "alternative" ou "indépendante",
+                    cette musique
+                    s'affranchie non seulement des règles concernant le rythme / les instruments / etc.. ; mais
+                    également l'écriture
+                    du texte : en effet on ne retrouvera pas de sujet commun à chaque musique, certaine peuvent parler
+                    politique,
+                    d'autre de l'enfance, porter un message d'engagement, de soutien, ou encore purement et simplement
+                    pour le plaisir d'écouter ou dancer dessus.
+                </div>
             </article>
         </section>
     </main>
