--- a/music/alternative.html
+++ b/music/alternative.html
@@ -48,17 +48,17 @@
             </h2>
             <article>
                 <h3>
-                    <div class="multi-link">
+                    <span class="multi-link">
                         <span>The Strokes</span>
-                        <div>
+                        <span class="ml-content">
                             <a href="https://open.spotify.com/artist/0epOFNiUfyON9EYx7Tpr6V" target="_blank"><img
                                     class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                             <a href="https://fr.wikipedia.org/wiki/The_Strokes" target="_blank"><img class="wiki-icon"
                                     src="../images/icons/wiki.png" alt="wikipedia link" /></a>
                             <a href="https://www.youtube.com/user/thestrokes" target="_blank"><img class="yt-icon"
                                     src="../images/icons/yt.png" alt="youtube link" /></a>
-                        </div>
-                    </div>
+                        </span>
+                    </span>
                 </h3>
                 <div class="no-overflow">
                     <figure class="float-right bordered img-align">
@@ -181,11 +181,11 @@
                 <div class="spotify-integ">
                     <div>
                         <iframe src="https://open.spotify.com/embed/track/2wA4NDDRLoEPyA4Zq6J1G1"
-                            allowtransparency="true" allow="encrypted-media"></iframe>
+                            allow="encrypted-media"></iframe>
                     </div>
                     <div>
                         <iframe src="https://open.spotify.com/embed/track/7kzKAuUzOITUauHAhoMoxA"
-                            allowtransparency="true" allow="encrypted-media"></iframe>
+                            allow="encrypted-media"></iframe>
                     </div>
                 </div>
                 <figure class="yt-integ">
@@ -214,17 +214,17 @@
             </article>
             <article>
                 <h3>
-                    <div class="multi-link">
+                    <span class="multi-link">
                         <span>Arctic Monkeys</span>
-                        <div>
+                        <span class="multi-link">
                             <a href="https://open.spotify.com/artist/7Ln80lUS6He07XvHI8qqHH" target="_blank"><img
                                     class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                             <a href="https://fr.wikipedia.org/wiki/Arctic_Monkeys" target="_blank"><img
                                     class="wiki-icon" src="../images/icons/wiki.png" alt="wikipedia link" /></a>
                             <a href="https://www.youtube.com/channel/UC-KTRBl9_6AX10-Y7IKwKdw" target="_blank"><img
                                     class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
-                        </div>
-                    </div>
+                        </span>
+                    </span>
                 </h3>
                 <div class="no-overflow">
                     <figure class="float-right bordered img-align">
@@ -362,11 +362,11 @@
                 <div class="spotify-integ">
                     <div>
                         <iframe src="https://open.spotify.com/embed/track/2x8evxqUlF0eRabbW2JBJd"
-                            allowtransparency="true" allow="encrypted-media"></iframe>
+                             allow="encrypted-media"></iframe>
                     </div>
                     <div>
                         <iframe src="https://open.spotify.com/embed/track/5FVd6KXrgO9B3JPmC8OPst"
-                            allowtransparency="true" allow="encrypted-media"></iframe>
+                             allow="encrypted-media"></iframe>
                     </div>
                 </div>
                 <figure class="yt-integ">
@@ -395,17 +395,17 @@
             </article>
             <article>
                 <h3>
-                    <div class="multi-link">
+                    <span class="multi-link">
                         <span>Imagine Dragons</span>
-                        <div>
+                        <span class="multi-link">
                             <a href="https://open.spotify.com/artist/53XhwfbYqKCa1cC15pYq2q" target="_blank"><img
                                     class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                             <a href="https://fr.wikipedia.org/wiki/Imagine_Dragons" target="_blank"><img
                                     class="wiki-icon" src="../images/icons/wiki.png" alt="wikipedia link" /></a>
                             <a href="https://www.youtube.com/user/ImagineDragons" target="_blank"><img class="yt-icon"
                                     src="../images/icons/yt.png" alt="youtube link" /></a>
-                        </div>
-                    </div>
+                        </span>
+                    </span>
                 </h3>
                 <div class="no-overflow">
                     <figure class="float-right bordered img-align">
@@ -506,11 +506,11 @@
                 <div class="spotify-integ">
                     <div>
                         <iframe src="https://open.spotify.com/embed/track/62yJjFtgkhUrXktIoSjgP2"
-                            allowtransparency="true" allow="encrypted-media"></iframe>
+                             allow="encrypted-media"></iframe>
                     </div>
                     <div>
                         <iframe src="https://open.spotify.com/embed/track/6Q2JimwoGgG5W9HdmH1hmq"
-                            allowtransparency="true" allow="encrypted-media"></iframe>
+                             allow="encrypted-media"></iframe>
                     </div>
                 </div>
                 <figure class="yt-integ">
@@ -540,17 +540,17 @@
             </article>
             <article>
                 <h3>
-                    <div class="multi-link">
+                    <span class="multi-link">
                         <span>The White Strips</span>
-                        <div>
+                        <span class="multi-link">
                             <a href="https://open.spotify.com/artist/4F84IBURUo98rz4r61KF70" target="_blank"><img
                                     class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                             <a href="https://fr.wikipedia.org/wiki/The_White_Stripes" target="_blank"><img
                                     class="wiki-icon" src="../images/icons/wiki.png" alt="wikipedia link" /></a>
                             <a href="https://www.youtube.com/user/whitestripes" target="_blank"><img class="yt-icon"
                                     src="../images/icons/yt.png" alt="youtube link" /></a>
-                        </div>
-                    </div>
+                        </span>
+                    </span>
                 </h3>
                 <div class="no-overflow">
                     <figure class="float-right bordered img-align">
@@ -680,11 +680,11 @@
                 <div class="spotify-integ">
                     <div>
                         <iframe src="https://open.spotify.com/embed/track/47wPvRG8FEwbZP22UBgTQr"
-                            allowtransparency="true" allow="encrypted-media"></iframe>
+                             allow="encrypted-media"></iframe>
                     </div>
                     <div>
                         <iframe src="https://open.spotify.com/embed/track/64tSc0F8az64sF1olXiNl5"
-                            allowtransparency="true" allow="encrypted-media"></iframe>
+                             allow="encrypted-media"></iframe>
                     </div>
                 </div>
                 <figure class="yt-integ">
@@ -714,17 +714,17 @@
             </article>
             <article>
                 <h3>
-                    <div class="multi-link">
+                    <span class="multi-link">
                         <span>Cage The Elephant</span>
-                        <div>
+                        <span class="multi-link">
                             <a href="https://open.spotify.com/artist/26T3LtbuGT1Fu9m0eRq5X3" target="_blank"><img
                                     class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                             <a href="https://fr.wikipedia.org/wiki/Cage_the_Elephant" target="_blank"><img
                                     class="wiki-icon" src="../images/icons/wiki.png" alt="wikipedia link" /></a>
                             <a href="https://www.youtube.com/user/cagetheelephant" target="_blank"><img class="yt-icon"
                                     src="../images/icons/yt.png" alt="youtube link" /></a>
-                        </div>
-                    </div>
+                        </span>
+                    </span>
                 </h3>
                 <div class="no-overflow">
                     <figure class="float-right bordered img-align">
@@ -834,11 +834,11 @@
                 <div class="spotify-integ">
                     <div>
                         <iframe src="https://open.spotify.com/embed/track/5c5a2Ptu8eyIpljhQHjIqk"
-                            allowtransparency="true" allow="encrypted-media"></iframe>
+                             allow="encrypted-media"></iframe>
                     </div>
                     <div>
                         <iframe src="https://open.spotify.com/embed/track/1Q3t9fWvHUXKsMmpD2XpUu"
-                            allowtransparency="true" allow="encrypted-media"></iframe>
+                             allow="encrypted-media"></iframe>
                     </div>
                 </div>
                 <figure class="yt-integ">
@@ -867,15 +867,15 @@
             </article>
             <article>
                 <h3>
-                    <div class="multi-link">
+                    <span class="multi-link">
                         <span>Caesars</span>
-                        <div>
+                        <span class="multi-link">
                             <a href="https://open.spotify.com/artist/4rGrN4XDYhP6dUAZMvcuHr" target="_blank"><img
                                     class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                             <a href="https://fr.wikipedia.org/wiki/Caesars" target="_blank"><img class="wiki-icon"
                                     src="../images/icons/wiki.png" alt="wikipedia link" /></a>
-                        </div>
-                    </div>
+                        </span>
+                    </span>
                     (Caesars Palace)
                 </h3>
                 <div class="no-overflow">
@@ -989,11 +989,11 @@
                 <div class="spotify-integ">
                     <div>
                         <iframe src="https://open.spotify.com/embed/track/0MXi112L7wWfoNYG0FJVQP"
-                            allowtransparency="true" allow="encrypted-media"></iframe>
+                             allow="encrypted-media"></iframe>
                     </div>
                     <div>
                         <iframe src="https://open.spotify.com/embed/track/4rVnE0SZwV04aiANWJvhpr"
-                            allowtransparency="true" allow="encrypted-media"></iframe>
+                             allow="encrypted-media"></iframe>
                     </div>
                 </div>
                 <figure class="yt-integ">
@@ -1022,17 +1022,17 @@
             </article>
             <article>
                 <h3>
-                    <div class="multi-link">
+                    <span class="multi-link">
                         <span>X Ambassadors</span>
-                        <div>
+                        <span class="multi-link">
                             <a href="https://open.spotify.com/artist/3NPpFNZtSTHheNBaWC82rB" target="_blank"><img
                                     class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                             <a href="https://fr.wikipedia.org/wiki/X_Ambassadors" target="_blank"><img class="wiki-icon"
                                     src="../images/icons/wiki.png" alt="wikipedia link" /></a>
                             <a href="https://www.youtube.com/user/XAmbassadors" target="_blank"><img class="yt-icon"
                                     src="../images/icons/yt.png" alt="youtube link" /></a>
-                        </div>
-                    </div>
+                        </span>
+                    </span>
                 </h3>
                 <div class="no-overflow">
                     <figure class="float-right bordered img-align">
@@ -1092,11 +1092,11 @@
                 <div class="spotify-integ">
                     <div>
                         <iframe src="https://open.spotify.com/embed/track/0fYVliAYKHuPmECRs1pbRf"
-                            allowtransparency="true" allow="encrypted-media"></iframe>
+                             allow="encrypted-media"></iframe>
                     </div>
                     <div>
                         <iframe src="https://open.spotify.com/embed/track/7lGKEWMXVWWTt3X71Bv44I"
-                            allowtransparency="true" allow="encrypted-media"></iframe>
+                             allow="encrypted-media"></iframe>
                     </div>
                 </div>
                 <figure class="yt-integ">
@@ -1125,17 +1125,17 @@
             </article>
             <article>
                 <h3>
-                    <div class="multi-link">
+                    <span class="multi-link">
                         <span>Twenty One Pilots</span>
-                        <div>
+                        <span class="multi-link">
                             <a href="https://open.spotify.com/artist/3YQKmKGau1PzlVlkL1iodx" target="_blank"><img
                                     class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                             <a href="https://fr.wikipedia.org/wiki/Twenty_One_Pilots" target="_blank"><img
                                     class="wiki-icon" src="../images/icons/wiki.png" alt="wikipedia link" /></a>
                             <a href="https://www.youtube.com/user/twentyonepilots" target="_blank"><img class="yt-icon"
                                     src="../images/icons/yt.png" alt="youtube link" /></a>
-                        </div>
-                    </div>
+                        </span>
+                    </span>
                 </h3>
                 <div class="no-overflow">
                     <figure class="float-right bordered img-align">
@@ -1229,11 +1229,11 @@
                 <div class="spotify-integ">
                     <div>
                         <iframe src="https://open.spotify.com/embed/track/2Z8WuEywRWYTKe1NybPQEW"
-                            allowtransparency="true" allow="encrypted-media"></iframe>
+                             allow="encrypted-media"></iframe>
                     </div>
                     <div>
                         <iframe src="https://open.spotify.com/embed/track/5cbpoIu3YjoOwbBDGUEp3P"
-                            allowtransparency="true" allow="encrypted-media"></iframe>
+                             allow="encrypted-media"></iframe>
                     </div>
                 </div>
                 <figure class="yt-integ">
