--- a/music/alternative.html
+++ b/music/alternative.html
@@ -85,7 +85,8 @@
                         un grand succès.
                     </p>
                     <p>
-                        Que ce soit la voix ou lse guitares, la sonorité garde un côté très "live" qui est en quelque
+                        Que ce soit la voix ou les
+                         guitares, la sonorité garde un côté très "live" qui est en quelque
                         sorte
                         la signature du groupe.<br />
                         Le groupe totalise actuellement (2019) 5 albums :
