--- a/music/electro.html
+++ b/music/electro.html
@@ -52,6 +52,7 @@
                 l'Electric Daisy Carnival et le Coachella.
                 <span class="source">Source : Wikipédia </span>
             </div>
+        </section>
 
             <section class="no-top-separator">
 
@@ -237,3 +238,10 @@
                         <span class="source">Source : Wikipédia </span>
                 </article>
             </section>
+    </main>
+    <footer>
+        <iframe src="../footer.html"></iframe>
+    </footer>
+</body>
+
+</html>
